--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
+    "window.zoomLevel": 0,
+    "workbench.startupEditor": "none",
+    "explorer.compactFolders": false,
+    "workbench.iconTheme": "material-icon-theme",
+    "editor.fontSize": 14,
+    "workbench.colorTheme": "OM Theme (Default Dracula Italic)",
+    "code-runner.executorMap": {
+        "python": "clear ; python -u",
+    },
     "code-runner.runInTerminal": true,
-"code-runner.clearPreviousOutput": true
+    "code-runner.ignoreSelection": true
 }
